--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,60 @@
-# Core Deep Learning (Latest Versions - December 2024)
-torch==2.5.1
-torchvision==0.20.1
-torchaudio==2.5.1
+# =============================================================================
+# Traffic Incident Classification System - Dependencies
+# =============================================================================
 
-# PyTorch Geometric (for GCN)
-torch-geometric==2.6.1
-torch-scatter==2.1.2
-torch-sparse==0.6.18
-torch-cluster==1.6.3
+# IMPORTANT: Install PyTorch FIRST with appropriate CUDA version:
+#
+# For NVIDIA GPU (CUDA 12.4):
+#   pip install torch==2.5.1 torchvision==0.20.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cu124
+#
+# For NVIDIA GPU (CUDA 12.1):
+#   pip install torch==2.5.1 torchvision==0.20.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cu121
+#
+# For CPU only:
+#   pip install torch==2.5.1 torchvision==0.20.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cpu
+#
+# =============================================================================
 
-# Data Processing & Visualization
-folium==0.18.0
-pandas==2.2.3
-numpy==2.1.3
-scikit-learn==1.5.2
-matplotlib==3.9.2
-seaborn==0.13.2
+# Core Data Science
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+folium>=0.14.0
 
 # Image Processing
-Pillow==11.0.0
-opencv-python==4.10.0.84
-albumentations==1.4.16
+Pillow>=10.0.0
+opencv-python>=4.8.0
 
-# GUI (tkinter comes with Python, no need to install separately)
+# PyTorch Geometric (install AFTER PyTorch)
+# For CUDA 12.4:
+#   pip install torch-geometric==2.6.1
+#   pip install torch-scatter torch-sparse torch-cluster -f https://data.pyg.org/whl/torch-2.5.0+cu124.html
+#
+# For CUDA 12.1:
+#   pip install torch-geometric==2.6.1
+#   pip install torch-scatter torch-sparse torch-cluster -f https://data.pyg.org/whl/torch-2.5.0+cu121.html
+#
+# For CPU:
+#   pip install torch-geometric==2.6.1
+#   pip install torch-scatter torch-sparse torch-cluster -f https://data.pyg.org/whl/torch-2.5.0+cpu.html
+
+torch-geometric==2.6.1
+
+# Dataset Management
+kaggle>=1.5.16
+kagglehub>=0.3.0
 
 # Utilities
-requests==2.32.3
-tqdm==4.67.1
-kaggle==1.6.17
-kagglehub==0.3.13
+requests>=2.31.0
+tqdm>=4.65.0
 
-# Optional but highly recommended for development
-jupyter==1.1.1
-ipykernel==6.29.5
+# Optional (for development)
+jupyter>=1.0.0
+ipython>=8.12.0
 
-# Additional packages for PyTorch 2.5.1 compatibility
-accelerate==1.1.1
-transformers==4.41.2
-datasets==3.1.0
+# GUI (usually pre-installed with Python)
+# If missing on Linux: sudo apt-get install python3-tk
